added folders and some small adjustments

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <app-showcase></app-showcase> -->
     <app-nav-bar></app-nav-bar> 
     <div ui-view></div>
+    <app-gallery></app-gallery>
    
     
     
