added stylings and functionality

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <app-nav-bar></app-nav-bar> 
     <div ui-view></div>
     <app-gallery></app-gallery>
+    <app-footer></app-footer>
    
     
     
