added router and small changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <app-showcase></app-showcase> -->
     <app-nav-bar></app-nav-bar> 
     <div ui-view></div>
-    <app-gallery></app-gallery>
+    <!-- <app-gallery></app-gallery> -->
     <app-footer></app-footer>
    
     
